# vibe-coding-projects

./: README.md
cli_calculator_project_qwen/: README.md  calculator.py  test_calculator.py  test_interactive.py
next_js_calculator/: README.md  package-lock.json  package.json
next_js_calculator/app/: globals.css  layout.tsx  page.tsx
next_js_calculator/components/: Calculator.module.css  Calculator.tsx
todo_app/: .env.example  .gitignore  API_DOCUMENTATION.md  COMMANDS.md  TEST_COMMANDS.md  pytest.ini
todo_app/app/: crud.py  models.py  routes.py  schemas.py
todo_app/tests/: conftest.py  test_api_endpoints.py  test_crud.py
todo_app_backend/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  main.py  postman_collection.json  pyproject.toml  test_setup.py
todo_app_backend/app/: database.py
todo_app_frontend_lovable/: README.md  index.html
todo_app_frontend_lovable/src/: index.css
todo_app_frontend_lovable/src/components/: TodoItem.tsx  TodoModal.tsx
todo_app_frontend_lovable/src/lib/: api.ts
todo_app_frontend_lovable/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Signup.tsx
todo_app_frontend_lovable/src/types/: todo.ts
